[package]
name = "tailscale_notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
confy = "0.6.1"
pushover = "0.4.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
